// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventPageRemoteContent /> should render correctly when remote event 1`] = `
<div
  id="jitsi-container"
>
  <Relay(EventOnlineThumbnail)
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "123id",
        "jitsiToken": null,
        "roomName": null,
        "timeRange": Object {
          "endAt": null,
          "startAt": "1996-11-28T08:00:00+0200",
        },
        "title": "Je suis un événement",
      }
    }
    hasEnded={true}
    hasStarted={true}
    isJitsiJoined={false}
    joinRoom={[Function]}
  />
</div>
`;

exports[`<EventPageRemoteContent /> should render correctly when remote live event 1`] = `
<div
  id="jitsi-container"
>
  <Relay(EventOnlineThumbnail)
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "123id",
        "jitsiToken": null,
        "roomName": null,
        "timeRange": Object {
          "endAt": "2022-11-28T08:00:00+0200",
          "startAt": "1996-11-28T08:00:00+0200",
        },
        "title": "Je suis un événement",
      }
    }
    hasEnded={false}
    hasStarted={true}
    isJitsiJoined={false}
    joinRoom={[Function]}
  />
</div>
`;
